package SEG11.IFE_Entertainment.FourConnect;

/**
 * Das enum Game mode.
 */
public enum GameMode {
    /**
     * Zwei Spieler game mode.
     */
    TWOPLAYER,
    /**
     * Bot game mode.
     */
    BOT
}
