package SEG11.IFE_Entertainment.FourConnect;

/**
 * Das enum Player.
 */
public enum Player {
	/**
	 * Menschlicher Spieler
	 */
	HUMAN,
	/**
	 * Simpler Bot Spieler
	 */
	EASYBOT,
	/**
	 * Schwerer Bot Spieler
	 */
	HARDBOT,
	/**
	 * Leerer Spieler, zum init des Spielfeldes
	 */
	NONE;
}
