package SEG11.IFE_Entertainment.GameCore;

public interface IMoveStrategy {
	void chooseMove(IPlayArea board);
}
